--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,8 +33,13 @@
                 <div class="py-3" >
                     <button type="submit"  class="text-white bg-green-500 hover:bg-green-900 font-medium rounded px-5 py-2"> Signup</button>
                 </div>
-                
+                <p class="py-2 ">Already have an account? <a href="/login" class="text-green-600">Login</a></p>
             </form>
+            <% if(messages && messages.error && messages.error.length >0) { %>
+                <% for(var i=0; i<messages.error.length; i++) { %>
+                    <li><%= messages.error[i] %></li>    
+               <% } %>
+            <% } %>
         </div>
     </div>
 </body>
